# rcbuild

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  RCBUILD  conanfile.txt
src/: ApplicationVersion.h  ApplicationVersion.hxx  CMakeLists.txt  Details.hxx  Path.cxx  Path.hxx  PathSC.cxx  PathSC.hxx  RcAsyncInstall.cxx  RcAsyncInstall.hxx  RcError.cxx  RcError.hxx  RcFetchSrc.cxx  RcFetchSrc.hxx  RcGenSources.cxx  RcGenSources.hxx  RcValues.cxx  RcValues.hxx  details.h  main.c  main.cxx  mem.c  mem.h  path.c  path.h  path_sc.c  process.c  process.h
